# language-translator

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
language_translator/: __init__.py  main.py  sample.py  soup.py
language_translator/application/: translate_html.py
language_translator/domain/finder/: html_finder.py
language_translator/domain/html_translator/: __init__.py  html_parser.py  test.py
language_translator/domain/translator/: __init__.py  xml_translator.py
language_translator/domain/translator/models/: IModel.py
language_translator/soup_test/: parse_xml.py
llm_translator/: __main__.py  sample.py  soup.py
llm_translator/application/: translate_html.py  translate_service.py
llm_translator/domain/file_finder/: html_finder.py
llm_translator/domain/html_translator/: __init__.py
llm_translator/domain/translator/: __init__.py  xml_translator.py
llm_translator/domain/translator/models/: gemma.py  mbart.py
samples.en/: _index.html  index.html
samples.en/api/: IContainerBase.html
samples.en/test/: _index.html
samples.en/xml/: sample.xml
src/llm_translator/: __main__.py  sample.py  test_cuda.py
src/llm_translator/application/: __init__.py  translate_service.py
src/llm_translator/domain/file_finder/: html_finder.py
src/llm_translator/domain/html_translator/: __init__.py
src/llm_translator/domain/translator/: __init__.py  xml_translator.py
src/llm_translator/domain/translator/models/: gemma.py  mbart.py  model_base.py  nllb_200.py
src/llm_translator/soup_test/: japanese.py
