[tool.poetry]
name = "language-translator"
version = "0.1.0"
description = ""
authors = ["shamada <shamada@jeol.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.2.0+cu118", source = "torch_cu118"}
transformers = "^4.37.2"
numpy = "^1.26.4"
langchain = "^0.1.9"
beautifulsoup4 = "^4.12.3"
sentencepiece = "^0.2.0"
protobuf = "^5.26.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
