[tool.poetry]
name = "llm_translator"
version = "0.1.0"
description = ""
authors = ["shamada <shamada@jeol.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.37.2"
numpy = "^1.26.4"
langchain = "^0.1.9"
beautifulsoup4 = "^4.12.3"
sentencepiece = "^0.2.0"
protobuf = "^5.26.0"
tqdm = "^4.66.2"
torch = "^2.2.1"
lxml = "^5.2.0"
fire = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
twine = "^5.0.0"
keyring = "^25.0.0"
artifacts-keyring = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
