[project]
name = "llm_translator"
version = "0.2.0"
description = ""
authors = [
    {name = "shamada", email = "shamada@jeol.co.jp"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.37.2",
    "numpy>=1.26.4",
    "langchain>=0.1.9",
    "beautifulsoup4>=4.12.3",
    "sentencepiece>=0.2.0",
    "protobuf>=5.26.0",
    "tqdm>=4.66.2",
    "torch>=2.2.1",
    "lxml>=5.2.0",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "fire>=0.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "twine>=5.0.0",
    "keyring>=25.0.0",
    "artifacts-keyring>=0.3.4",
]

[[tool.uv.index]]
name = "JEOL-PyPI"
url = "https://jeol-em-1g.pkgs.visualstudio.com/Donau/_packaging/JEOL-PyPI/pypi/"
publish-url = "https://jeol-em-1g.pkgs.visualstudio.com/Donau/_packaging/JEOL-PyPI/pypi/upload/"

[tool.uv]
keyring-provider = "subprocess"
